--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,10 +42,12 @@ en:
     create_success_flash_notification: 'Your order was successfully created.'
     edit: 'Edit Order'
     new: 'New Order'
+    no_line_items: 'This order has no line items.'
     order_id: 'Order ID'
     shipped_at: 'Shipped At'
     shipped_orders: 'Shipped Orders'
     table_name: 'Orders'
+    title: 'Order %{id}'
     unshipped_orders: 'Unshipped Orders'
     update_success_flash_notification: 'Your order was successfully updated.'
     widget: 'Item'
